# python-vscode-copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  swagger.json
app/: controller.py  server.py
app/endpoints/: f14.py  hello.py  image.py  list_endpoints.py
static/: hello.html  openapi.json
static/swaggerui/: swagger-initializer.js
swagger_ui_static/: swagger-initializer.js
tests/: test_integration.py
